--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,13 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+@font-face {
+  font-family: 'VCR Solid';
+  src: local('VCR Solid'), url(./vcr_solid.ttf) format('woff');
+}
+
+@font-face {
+  font-family: 'Cirrus Cumulus';
+  src: local('Cirrus Cumulus'), url(./CirrusCumulus.ttf) format('woff');
+}
