about page, payment progress

--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -38,8 +38,9 @@
 	font-family: 'VCR Solid';
 }
 
-.Home-ticketLink {
+.Home-link {
 	font-size: 30px;
 	color: white;
 	font-family: 'VCR Solid';
+	margin-right: 24px;
 }
