--- a/src/components/tickets/form.css
+++ b/src/components/tickets/form.css
@@ -88,6 +88,18 @@
 .Form-payment {
 	display: flex;
 }
+.Form-validation {
+	opacity: 0;
+}
+.Form-validationShown {
+	opacity: 1;
+}
+
+.Form-error {
+	color: #FF1A1A;
+	margin-bottom: 20px;
+	transition: opacity 1s linear;
+}
 
 .Form-submit {
 	border: solid #2300FA 4px;
@@ -99,6 +111,11 @@
 	margin: auto;
 }
 
+.Form-submit:disabled {
+	opacity: .3;
+	cursor: unset;
+}
+
 .Form-back {
 	border: solid #FA15FF 4px;
 	color: #2300FA;
@@ -107,4 +124,44 @@
 	font-size: 23px;
 	font-family: 'VCR Solid';
 	margin: 30px;
+}
+
+.Form-processing {
+	width: 100vw;
+	height: 100vh;
+	background: rgba(0,0,0, .7);
+	font-size: 48px;
+	font-family: 'VCR Solid';
+	color: #2300FA;
+	position: absolute;
+	top: 0;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.Form-processing-container:after {
+	color: #2300FA;
+	overflow: hidden;
+	display: inline-block;
+	vertical-align: bottom;
+	-webkit-animation: ellipsis steps(4,end) 1200ms infinite;
+	animation: ellipsis steps(4,end) 1200ms infinite;
+	content: "\2505"; /* ascii code for the ellipsis character */
+	width: 0px;
+	font-family: 'VCR Solid';
+	margin-left: 6px;
+	line-height: 34px;
+}
+
+@keyframes ellipsis {
+	to {
+		width: .8em;
+	}
+}
+
+@-webkit-keyframes ellipsis {
+	to {
+		width: .8em;
+	}
 }
