--- a/src/pages/tickets.css
+++ b/src/pages/tickets.css
@@ -16,8 +16,10 @@
 	align-items: flex-end;
 	max-width: 66vw;
 }
-.max {
+
+.Tickets-max {
 	text-align: center;
+	flex-wrap: wrap;
 }
 
 .Tickets-loadingText-container {
@@ -84,4 +86,11 @@
 	color: #FA15FF;
 	max-width: 60%;
 	text-align: center;
+}
+
+.Tickets-link {
+	width: 100%;
+	margin-top: 20px;
+	color: white;
+	text-decoration: underline;
 }
