--- a/src/components/popups/popups.css
+++ b/src/components/popups/popups.css
@@ -37,6 +37,37 @@
 	top: 30%;
 }
 
+@media only screen and (max-width: 900px) {
+	.Popups-box1 {
+		left: 40%;
+		top: 10%;
+	}
+	.Popups-box2 {
+		left: 2%;
+		top: 40%;
+	}
+	.Popups-box3 {
+		left: 30%;
+		top: 30%;
+	}
+}
+
+@media only screen and (max-width: 500px) {
+	.Popups-box1 {
+		left: 15%;
+		top: 28%;
+	}
+	.Popups-box2 {
+		left: 2%;
+		top: 37%;
+	}
+	.Popups-box3 {
+		left: 12%;
+		top: 19%;
+	}
+}
+
+
 
 .Popups-talks {
 	margin: 20px;
@@ -103,6 +134,11 @@
 	text-align: center;
 }
 
+@keyframes join {
+	50% {color: #FF1A1A;
+		  fill: #FF1A1A}
+  }
+
 .Popups-join {
 	display: flex;
 	width: 100%;
@@ -112,13 +148,20 @@
 	font-size: 44px;
 	text-align: center;
 	color: #1005E0;
+	animation: join 3s steps(1) infinite;
 }
 
 .Popups-join:hover {
 	color: #FA15FF;
+	animation: none;
 }
-.Popups-join:hover img {
+.Popups-join svg path {
+	fill: #1005E0;
+	animation: join 3s steps(1) infinite;
+}
+.Popups-join:hover svg path {
 	fill: #FA15FF;
+	animation: none;
 }
 
 .Popups-close {
