--- a/src/components/tickets/form.css
+++ b/src/components/tickets/form.css
@@ -1,13 +1,9 @@
 .Form {
-	padding-top: 260px;
 	font-family: 'VCR Solid';
 	display: flex;
 	flex-wrap: nowrap;
-	justify-content: space-between;
-}
-
-.Form-left {
-	margin-left: 200px;
+	justify-content: space-evenly;
+	width: 100%;
 }
 
 .Form-circle {
@@ -31,7 +27,7 @@
 }
 
 .Form-square {
-	width: 479px;
+	width: 70%;
 }
 
 .Form-tax {
@@ -43,10 +39,6 @@
 .Form-total {
 	font-size: 26px;
 	color: #2300FA;
-}
-
-.Form-right {
-	margin-right: 145px;
 }
 
 .Form-data {
@@ -110,6 +102,14 @@
 	font-family: 'VCR Solid';
 	margin: auto;
 }
+.Form-back:hover {
+	border-color: #2300FA;
+	color: #FA15FF;
+}
+.Form-submit:hover {
+	color: #2300FA;
+	border-color: #FA15FF;
+}
 
 .Form-submit:disabled {
 	opacity: .3;
@@ -123,7 +123,7 @@
 	border-radius: 100%;
 	font-size: 23px;
 	font-family: 'VCR Solid';
-	margin: 30px;
+	margin-right: 30px
 }
 
 .Form-processing {
@@ -163,5 +163,111 @@
 @-webkit-keyframes ellipsis {
 	to {
 		width: .8em;
+	}
+}
+
+#payment-form {
+	display: flex;
+	flex-wrap: wrap;
+}
+
+@media only screen and (max-width: 1023px) {
+	.Form {
+		flex-direction: column;
+	}
+	.Form-right,
+	.Form-left {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+	}
+	.Form-circle {
+		margin-bottom: 20px;
+		margin-top: 20px;
+		max-width: 200px;
+	}
+	.Form-tax {
+		margin-bottom: 20px;
+	}
+	.Form-total {
+		margin-bottom: 40px;
+	}
+	.Form-card {
+		margin-top: 0px;
+	}
+	.Form-buttons {
+		display: flex;
+		justify-content: center;
+	}
+	#payment-form {
+		justify-content: center;
+	}
+	.Form-back,
+	.Form-submit {
+		padding: 20px 5px;
+	}
+}
+
+@media only screen and (max-width: 700px) {
+	.Form-data {
+		display: flex;
+		flex-direction: column;
+	}
+	.Form-total {
+		margin-bottom: 25px;
+	}
+	.Form-input {
+		width: 90%;
+	}
+	.Form-subtotal,
+	.Form-total,
+	.Form-tax {
+		font-size: 22px;
+	}
+	.Form-input-label {
+		font-size: 20px;
+	}
+	.Form-back,
+	.Form-submit {
+		font-size: 20px;
+	}
+	.Form-circle,
+	.Form-ticket {
+		font-size: 24px;
+	}
+	.Form-error,
+	.Form-validationShown {
+		margin-right: 20px;
+		margin-left: 20px;
+		text-align: center;
+	}
+}
+
+@media only screen and (max-width: 450px) {
+	.Form-data {
+		display: flex;
+		flex-direction: column;
+		margin-left: 20px;
+	}
+	.Form-input {
+		width: 90%;
+	}
+	.Form-subtotal,
+	.Form-total,
+	.Form-tax {
+		font-size: 20px;
+	}
+	.Form-input-label {
+		font-size: 20px;
+	}
+	.Form-error,
+	.Form-validationShown {
+		margin-right: 20px;
+		margin-left: 20px;
+		text-align: center;
+	}
+	.Form-back,
+	.Form-submit {
+		font-size: 18px;
 	}
 }
