--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -1,7 +1,10 @@
 .Home {
 	background: black;
-	width: 100vw;
-	height: 100vh;
+	min-width: 100vw;
+	min-height: 100vh;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 
 .Home-unauth {
@@ -10,10 +13,15 @@
 
 .Home-title {
 	margin: 0;
-	padding-top: 300px;
 	font-size: 288px;
 	color: white;
 	font-family: 'Cirrus Cumulus';
+}
+.Home-formContainer {
+	position: absolute;
+	width: 100%;
+	left: 0;
+	bottom: 60px;
 }
 
 .Home-form {
@@ -43,4 +51,37 @@
 	color: white;
 	font-family: 'VCR Solid';
 	margin-right: 24px;
+}
+
+@media only screen and (max-width: 820px) {
+	.Home-title {
+		font-size: 220px;
+	}
+	.Home-form {
+		margin: 0 20px;
+		font-size: 24px;
+	}
+	.Home-input {
+		font-size: 24px;
+		width: 50%;
+	}
+}
+
+@media only screen and (max-width: 500px) {
+	.Home-title {
+		font-size: 120px;
+	}
+	.Home-form {
+		margin: 0 20px;
+		font-size: 24px;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+	}
+	.Home-input {
+		margin-top: 20px;
+		font-size: 24px;
+		width: 90%;
+	}
+
 }
