--- a/src/components/homeLogo.css
+++ b/src/components/homeLogo.css
@@ -7,5 +7,17 @@
 	position: absolute;
 	top: 0;
 	left: 0;
-	padding: 20px;
+	padding: 40px;
+	z-index: 1;
+	background: black;
+	border-radius: 9px;
+}
+
+@media only screen and (max-width: 650px) {
+	.HomeLogo {
+		width: 100vw;
+		text-align: center;
+		padding: 0;
+		background: #0000008c;
+	}
 }
