--- a/src/pages/about.css
+++ b/src/pages/about.css
@@ -50,13 +50,16 @@
 }
 
 .About-festival {
-	grid-column: 4 / span 3;
+	grid-column: 6 / span 3;
+}
+
+.About-is {
+	grid-column: 8 / span 3;
 	justify-content: center;
 }
 
 .About-celebration {
-	grid-column: 4 / span 9;
-	justify-content: flex-end;
+	grid-column: 5 / span 2;
 }
 
 @media only screen and (max-width: 1023px) {
@@ -66,15 +69,25 @@
 }
 
 .About-community {
-	grid-column: 1 / span 10;
+	grid-column: 4 / span 8;
+}
+
+.About-summer {
+	grid-column: 1 / span 1;
 }
 
 .About-how {
-	grid-column: 5 / span 4;
+	grid-column: 6 / span 5;
+	justify-content: flex-end;
 }
 
 .About-know {
-	grid-column: 3 / span 10;
+	grid-column: 4 / span 5;
+	justify-content: flex-end;
+}
+.About-love {
+	grid-column: 5 / span 8;
+	justify-content: flex-end;
 }
 
 @media only screen and (max-width: 1023px) {
