--- a/src/components/tickets/amountSelection.css
+++ b/src/components/tickets/amountSelection.css
@@ -15,6 +15,7 @@
 	display: inline-flex;
 	font-weight: 400;
 	font-size: 38px;
+	text-transform: uppercase;
 }
 
 .AmountSelection-paragraph {
@@ -22,6 +23,15 @@
 	margin-bottom: 40px;
 	text-align: center;
 	font-size: 25px;
+	text-transform: uppercase;
+	max-width: 60%;
+	margin-right: auto;
+	margin-left: auto;
+}
+
+.AmountSelection-secondary {
+	color: #FA15FF;
+	font-size: 20px;
 }
 
 .AmountSelection-circle {
